[package]
name = "bookfile"
version = "0.1.0"
authors = ["Eric Seppanen <eds@reric.net>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
aversion = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
byteorder = "1.4"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.2"
